Listagem de clientes com paginação

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,7 +4,7 @@
 		<title>Jumia</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.18/css/dataTables.bootstrap.min.css">
-
+		<link rel="stylesheet" href="public/assets/app.css">
 	</head>
 	<body>
 		<div class="row">
