--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,8 +15,8 @@
 
 			<div class="col-md-3">
 				<label>Valid phone number?</label>
-				<select class="form-control" id="valid_form_number">
-					<option value="-1">All numbers</option>
+				<select class="form-control" id="valid_numbers">
+					<option value="">All numbers</option>
 					<option value="1">Only valid numbers</option>
 					<option value="0">Only invalid numbers</option>
 				</select>
